--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ footer {
   font-family: sans-serif;
 }
 
-.w {
+.f {
   background-image: url('images/tom1.png');
 }
 
@@ -41,6 +41,10 @@ footer {
 }
 
 .l {
+  background-image: url('images/kick.png');
+}
+
+.; {
   background-image: url('images/kick.png');
 }
 
