--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,13 @@ footer {
   background-image: url('images/crash.png');
 }
 
-.l .; {
+.l {
   background-image: url('images/kick.png');
 }
 
-/* .; {
+.; {
   background-image: url('images/kick.png');
-} */
+}
 
 .set {
   margin: 10% auto;
